src/objects/Apttus__DocumentVersionDetail__c.object
<CustomObject>
    <description>Holds the version details of a document</description>
    <fields>
        <fullName>Apttus__Action2__c</fullName>
        <description>The action which created the version</description>
        <inlineHelpText>The action which created the version</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generate Agreement</fullName>
                </value>
                <value>
                    <fullName>Regenerate Agreement</fullName>
                </value>
                <value>
                    <fullName>Create Offline Agreement</fullName>
                </value>
                <value>
                    <fullName>Import Offline Agreement</fullName>
                </value>
                <value>
                    <fullName>Check In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Comment__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContentId__c</fullName>
        <description>ID of the associated content</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the associated content</inlineHelpText>
        <label>Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentInfo__c</fullName>
        <description>Additional document information</description>
        <inlineHelpText>Additional document information</inlineHelpText>
        <label>Document Info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Clean</fullName>
                </value>
                <value>
                    <fullName>Redlines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__DocumentVersionId__c</fullName>
        <description>Lookup to the Document Version this record is part of</description>
        <inlineHelpText>Lookup to the Document Version this record is part of</inlineHelpText>
        <label>Document Version</label>
        <referenceTo>Apttus__DocumentVersion__c</referenceTo>
        <relationshipLabel>Document Version Details</relationshipLabel>
        <relationshipName>Document_Version_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__IsTransient__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates a transient version. A new version is in transient state until the document is successfully attached to the version. Workflow rules should check this field to test for false before firing so that rules are not incorrectly fired when transient versions are created .</description>
        <inlineHelpText>Indicates a transient version. A new version is in transient state until the document is successfully attached to the version. Workflow rules should check this field to test for false before firing.</inlineHelpText>
        <label>Is Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__ParentDocumentVersionDetailId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the parent document version id from where this version is derived</description>
        <inlineHelpText>Lookup to the parent document version id from where this version is derived</inlineHelpText>
        <label>Ancestor</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Document Version Details</relationshipLabel>
        <relationshipName>Document_Version_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Tags__c</fullName>
        <description>Document tags</description>
        <inlineHelpText>Document tags</inlineHelpText>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template version that was used to generate this document</description>
        <inlineHelpText>Template version that was used to generate this document</inlineHelpText>
        <label>Template Version</label>
        <referenceTo>Apttus__TemplateVersion__c</referenceTo>
        <relationshipLabel>Document Version Details</relationshipLabel>
        <relationshipName>DocumentVersionDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Title__c</fullName>
        <description>The title of the document version</description>
        <inlineHelpText>The title of the document version</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionMajor__c</fullName>
        <description>Major version</description>
        <inlineHelpText>Major version</inlineHelpText>
        <label>Version Major</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionMinor__c</fullName>
        <description>Minor version</description>
        <inlineHelpText>Minor version</inlineHelpText>
        <label>Version Minor</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionRevision__c</fullName>
        <description>Revision version</description>
        <inlineHelpText>Revision version</inlineHelpText>
        <label>Version Revision</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__View__c</fullName>
        <description>View the associated content</description>
        <formula>IF(Apttus__IsTransient__c == FALSE, HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Apttus__ContentId__c ,&quot;View&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>View the associated content</inlineHelpText>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Document Version Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Version Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>